[package]
name = "try-from-map"
version = "0.1.2"
edition = "2021"
description = "A derive macro for converting a HashMap<String, String> into a struct"
license = "MIT"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
