[package]
name = "try-from-map"
version = "0.2.1"
edition = "2021"
description = "A derive macro for converting a HashMap<String, String> into a struct"
repository = "https://github.com/seftontycho/try-from-map"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"